--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -33,7 +33,10 @@ window#waybar {
   background: #11111b;
   color: #b4befe;
   box-shadow: none;
-  padding: 4px 10px;
+  padding: 0px ;
+  margin: 0px;
+  border-radius: 0px;
+  border: 0px;
 }
 
 #clock,
